Add CSS variables and design system comments

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&family=Space+Grotesk:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
+        /* =========================================
+           CSS VARIABLES & DESIGN SYSTEM
+           ========================================= */
         :root {
             --bg-deep: #0a0f1f;
             --bg-darker: #050812;
@@ -23,6 +26,9 @@
             --border-tech: 1px solid rgba(0, 245, 255, 0.2);
         }
 
+        /* =========================================
+           RESET & BASE STYLES
+           ========================================= */
         * {
             margin: 0;
             padding: 0;
