--- a/index.html
+++ b/index.html
@@ -170,12 +170,14 @@
            HERO SECTION
            ========================================= */
         .hero {
-            height: 100vh;
+            min-height: 100vh;
             display: flex;
-            align-items: center;
+            flex-direction: column;
             justify-content: center;
+            align-items: center;
             position: relative;
-            padding-top: 80px;
+            padding-top: 140px; /* Increased safe zone for the fixed navbar */
+            padding-bottom: 60px;
             text-align: center;
         }
 
