Update hero subtitle and project descriptions

--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,7 @@
             
             <div class="reveal" style="transition-delay: 0.2s;">
                 <h1 class="hero-title">Engineering the Future<br>With Chakra & Code</h1>
-                <p class="hero-subtitle">Girish Lade | Founder of Lade Stack | UI/UX Hokage | AI Systems Builder</p>
+                <p class="hero-subtitle">Girish Lade | Founder of Lade Stack | UI/UX Hokage | Inheriting the Will of Fire</p>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary">
                         <svg class="svg-icon" style="width:1.2em; height:1.2em"><use href="#icon-scroll"></use></svg>
@@ -1090,16 +1090,16 @@
                 <div class="about-grid">
                     <div class="about-text">
                         <p>I am an <strong>innovative creator</strong> and modern builder working at the intersection of AI, design, and scalable SaaS systems.</p>
-                        <p>Based in India 🇮🇳, my passion lies in Generative AI, intelligent automation, and crafting developer-first tools that break the boundaries of conventional software, much like mastering a forbidden jutsu.</p>
-                        <p>As the founder of <strong>Lade Stack</strong>, I am constructing an AI-powered ecosystem of intelligent productivity tools designed for the future shinobi.</p>
+                        <p>Based in India 🇮🇳, my passion lies in Generative AI, intelligent automation, and crafting developer-first tools that break the boundaries of conventional software, much like mastering a <strong>Forbidden Jutsu (Kinjutsu)</strong>.</p>
+                        <p>As the Hokage of <strong>Lade Stack</strong>, I am constructing an AI-powered ecosystem of intelligent productivity tools designed for the future shinobi generation.</p>
                     </div>
                     <div class="about-focus">
                         <h3 style="color: #8b0000; margin-bottom: 1rem; font-family: var(--font-heading); font-size: 2.2rem;">Current Nindō (Ninja Way)</h3>
                         <ul class="focus-list">
-                            <li><svg><use href="#icon-kunai"></use></svg> Forging AI SaaS products & ecosystem integration</li>
+                            <li><svg><use href="#icon-kunai"></use></svg> Forging AI SaaS Kekkei Genkai (Bloodline Traits)</li>
                             <li><svg><use href="#icon-kunai"></use></svg> Developing Rank-S cloud file sharing platforms</li>
-                            <li><svg><use href="#icon-kunai"></use></svg> Researching advanced Generative AI jutsu</li>
-                            <li><svg><use href="#icon-kunai"></use></svg> Mastering Kotlin for high-performance mobile apps</li>
+                            <li><svg><use href="#icon-kunai"></use></svg> Researching advanced Generative AI Senjutsu</li>
+                            <li><svg><use href="#icon-kunai"></use></svg> Mastering Kotlin for high-performance mobile tools</li>
                             <li><svg><use href="#icon-kunai"></use></svg> Architecting full-stack scalable infrastructure</li>
                         </ul>
                     </div>
@@ -1122,7 +1122,7 @@
             <div class="skills-grid">
                 <!-- Frontend -->
                 <div class="skill-category reveal">
-                    <h3><svg class="svg-icon" style="color:var(--color-red)"><use href="#icon-sharingan"></use></svg> Visual Jutsu (Frontend)</h3>
+                    <h3><svg class="svg-icon" style="color:var(--color-red)"><use href="#icon-sharingan"></use></svg> Dōjutsu (Visual / Frontend)</h3>
                     <div class="skill-item">
                         <div class="skill-info"><span>HTML, CSS, JS/TS</span><span>95%</span></div>
                         <div class="skill-bar-bg"><div class="skill-fill" data-width="95%"></div></div>
@@ -1139,7 +1139,7 @@
 
                 <!-- Backend -->
                 <div class="skill-category reveal" style="transition-delay: 0.1s;">
-                    <h3><svg class="svg-icon" style="color:var(--text-main)"><use href="#icon-scroll"></use></svg> Core Seals (Backend)</h3>
+                    <h3><svg class="svg-icon" style="color:var(--text-main)"><use href="#icon-scroll"></use></svg> Fūinjutsu (Sealing / Backend)</h3>
                     <div class="skill-item">
                         <div class="skill-info"><span>Node.js Architecture</span><span>88%</span></div>
                         <div class="skill-bar-bg"><div class="skill-fill" data-width="88%"></div></div>
@@ -1156,7 +1156,7 @@
 
                 <!-- Cloud -->
                 <div class="skill-category reveal" style="transition-delay: 0.2s;">
-                    <h3><svg class="svg-icon" style="color:var(--color-red)"><use href="#icon-cloud"></use></svg> Cloud Summoning</h3>
+                    <h3><svg class="svg-icon" style="color:var(--color-red)"><use href="#icon-cloud"></use></svg> Space-Time Ninjutsu (Cloud)</h3>
                     <div class="skill-item">
                         <div class="skill-info"><span>AWS Infrastructure</span><span>82%</span></div>
                         <div class="skill-bar-bg"><div class="skill-fill" data-width="82%"></div></div>
@@ -1173,7 +1173,7 @@
 
                 <!-- AI / Design -->
                 <div class="skill-category reveal" style="transition-delay: 0.3s;">
-                    <h3><svg class="svg-icon" style="color:var(--color-crimson)"><use href="#icon-fox"></use></svg> Nine-Tails AI</h3>
+                    <h3><svg class="svg-icon" style="color:var(--color-crimson)"><use href="#icon-fox"></use></svg> Sage Mode (AI Systems)</h3>
                     <div class="skill-item">
                         <div class="skill-info"><span>Generative AI Integration</span><span>92%</span></div>
                         <div class="skill-bar-bg"><div class="skill-fill" data-width="92%"></div></div>
@@ -1214,7 +1214,7 @@
                     <div class="project-content">
                         <svg class="project-icon rasengan"><use href="#icon-rasengan"></use></svg>
                         <h3 class="project-title">AI Code Enhancer (Rasengan)</h3>
-                        <p class="project-desc">An intelligent developer tool that leverages Generative AI to optimize, refactor, and generate boilerplate code seamlessly, bridging the gap between human logic and machine speed.</p>
+                        <p class="project-desc"><strong>Mission Brief:</strong> An intelligent developer tool that leverages Generative AI to optimize, refactor, and generate boilerplate code seamlessly, bridging the gap between human logic and machine speed.</p>
                         <div class="project-tech">
                             <span class="tech-tag">Node.js</span>
                             <span class="tech-tag">GenAI API</span>
@@ -1234,8 +1234,8 @@
 
                     <div class="project-content">
                         <svg class="project-icon cloud"><use href="#icon-cloud"></use></svg>
-                        <h3 class="project-title">Cloud File Sharing</h3>
-                        <p class="project-desc">A highly scalable, secure, and fast cloud architecture designed for seamless large-scale file sharing and encrypted storage across global hidden villages.</p>
+                        <h3 class="project-title">Cloud File Sharing Network</h3>
+                        <p class="project-desc"><strong>Mission Brief:</strong> A highly scalable, secure, and fast cloud architecture designed for seamless large-scale file sharing and encrypted storage across global hidden villages.</p>
                         <div class="project-tech">
                             <span class="tech-tag">AWS</span>
                             <span class="tech-tag">MongoDB</span>
@@ -1256,7 +1256,7 @@
                     <div class="project-content">
                         <svg class="project-icon lightning"><use href="#icon-lightning"></use></svg>
                         <h3 class="project-title">API Testing Tool (Chidori)</h3>
-                        <p class="project-desc">A lightweight, lightning-fast dashboard for testing backend endpoints, managing authentication headers, and simulating high-load traffic.</p>
+                        <p class="project-desc"><strong>Mission Brief:</strong> A lightweight, lightning-fast dashboard for testing backend endpoints, managing authentication headers, and piercing through high-load traffic bottlenecks.</p>
                         <div class="project-tech">
                             <span class="tech-tag">JavaScript</span>
                             <span class="tech-tag">HTML/CSS</span>
@@ -1276,8 +1276,8 @@
 
                     <div class="project-content">
                         <svg class="project-icon sharingan"><use href="#icon-sharingan"></use></svg>
-                        <h3 class="project-title">AI Workspace Suite</h3>
-                        <p class="project-desc">The crown jewel of Lade Stack. An integrated productivity environment utilizing AI to automate daily tasks, design system generation, and data visualization.</p>
+                        <h3 class="project-title">Tsukuyomi (AI Workspace)</h3>
+                        <p class="project-desc"><strong>Mission Brief:</strong> The ultimate genjutsu of productivity. An integrated environment utilizing AI to automate daily tasks, design system generation, and manipulate data visualization perfectly.</p>
                         <div class="project-tech">
                             <span class="tech-tag">Full Stack</span>
                             <span class="tech-tag">GCP</span>
@@ -1306,8 +1306,8 @@
                         <svg><use href="#icon-sharingan"></use></svg>
                     </div>
                     <div class="timeline-content">
-                        <h3 style="color: var(--color-crimson); margin-bottom: 0.5rem; font-family: var(--font-heading); font-size: 1.8rem;">Academy Foundation</h3>
-                        <p style="color: var(--text-muted); font-size: 0.95rem;">Mastering the core principles of UI/UX, full-stack development, and cloud computing architectures to build a solid base.</p>
+                        <h3 style="color: var(--color-crimson); margin-bottom: 0.5rem; font-family: var(--font-heading); font-size: 1.8rem;">Academy Student (Foundation)</h3>
+                        <p style="color: var(--text-muted); font-size: 0.95rem;">Mastering the core principles of UI/UX, full-stack development, and cloud computing architectures to build a solid base. Learning the basic clones and transformations of code.</p>
                     </div>
                 </div>
                 
@@ -1316,8 +1316,8 @@
                         <svg><use href="#icon-sharingan"></use></svg>
                     </div>
                     <div class="timeline-content">
-                        <h3 style="color: var(--color-cyan); margin-bottom: 0.5rem; font-family: var(--font-heading); font-size: 1.8rem;">Chūnin Exams: AI Integration</h3>
-                        <p style="color: var(--text-muted); font-size: 0.95rem;">Pioneering research into Generative AI systems and learning how to bridge neural network capabilities with practical SaaS solutions.</p>
+                        <h3 style="color: var(--color-cyan); margin-bottom: 0.5rem; font-family: var(--font-heading); font-size: 1.8rem;">Chūnin Exams (AI Integration)</h3>
+                        <p style="color: var(--text-muted); font-size: 0.95rem;">Pioneering research into Generative AI systems and learning how to bridge neural network capabilities with practical SaaS solutions. Passing the forest of death in backend architecture.</p>
                     </div>
                 </div>
 
@@ -1326,8 +1326,8 @@
                         <svg><use href="#icon-sharingan"></use></svg>
                     </div>
                     <div class="timeline-content">
-                        <h3 style="color: var(--color-crimson); margin-bottom: 0.5rem; font-family: var(--font-heading); font-size: 1.8rem;">Jōnin: Lade Stack Inception</h3>
-                        <p style="color: var(--text-muted); font-size: 0.95rem;">Establishing the Lade Stack brand. An ecosystem dedicated to empowering developers and creators through automated, intelligent tools.</p>
+                        <h3 style="color: var(--color-crimson); margin-bottom: 0.5rem; font-family: var(--font-heading); font-size: 1.8rem;">Anbu Black Ops (Lade Stack)</h3>
+                        <p style="color: var(--text-muted); font-size: 0.95rem;">Establishing the Lade Stack brand in the shadows. Building an ecosystem dedicated to empowering developers and creators through automated, intelligent, high-rank tools.</p>
                     </div>
                 </div>
             </div>
@@ -1343,10 +1343,10 @@
         <div class="container">
             <div class="section-header reveal">
                 <svg class="shuriken-motif"><use href="#icon-shuriken"></use></svg>
-                <h2 class="section-title">Summoning Jutsu (Contact)</h2>
+                <h2 class="section-title">Kuchiyose no Jutsu (Summoning)</h2>
                 <svg class="shuriken-motif"><use href="#icon-shuriken"></use></svg>
                 <br>
-                <p style="color: var(--text-muted); margin-top: 1rem; font-size: 1.1rem; width:100%;">Ready to forge the next generation of AI and SaaS? Send a messenger bird.</p>
+                <p style="color: var(--text-muted); margin-top: 1rem; font-size: 1.1rem; width:100%;">Bite your thumb, weave the hand signs, and send a messenger bird to forge the next generation of AI and SaaS.</p>
             </div>
 
             <div class="contact-wrapper reveal">
